--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <script src="popup.js"></script>
 
 
-<img src="logo.jpg" width="48" height="48" class="logo" />
+<img src="logo.png" width="48" height="48" class="logo" />
 <div class="set-username">
   <input type="text" name="userName" id="user-name" placeholder="Username e.g. cifdebater" />
   <button type="button" id="set-user-name">Set username</button>
