Add status field

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 </div>
 
 <div class="tools">
-  <a href="#" id="connect">Connect</a>
+  <a href="#" id="connect">Connect <span id="connection-status"></span></a>
   <a href="#" id="disconnect">Disconnect</a>
   <a href="#" id="ping">Send a test message</a>
 </div>
